# DataComparison

./: .gitignore  CMakeLists.txt  README.md  helper.cpp  helper.h  main.cpp
core/: CMakeLists.txt
core/headers/: ArgsParser.h  core.h
core/sources/: ArgsParser.cpp  core.cpp
lib/: CMakeLists.txt
lib/headers/: DataContainer.h  DataSetContainer.h  DistributionHelper.h
lib/sources/: DistributionHelper.cpp
tests/: CMakeLists.txt  test.h  test_DataContainer.cpp  test_DataContainer.h  tests_main.cpp
